--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   shimmer: ^2.0.0
   intl: ^0.17.0
   dotted_border: ^2.0.0+2
+  page_transition: ^2.0.5
 
 dev_dependencies:
   flutter_test:
