--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   intl: ^0.17.0
   dotted_border: ^2.0.0+2
   page_transition: ^2.0.5
+  dropdown_button2: ^1.4.0
+  table_calendar: ^3.0.5
+
 
 dev_dependencies:
   flutter_test:
