--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   page_transition: ^2.0.5
   dropdown_button2: ^1.4.0
   table_calendar: ^3.0.5
+  mask_text_input_formatter: ^2.3.0
 
 
 dev_dependencies:
